--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0
+  http: ^1.1.2
   lottie: ^2.7.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
